<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0f0f0"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp" >

                <EditText
                    android:id="@+id/title_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/title"
                    android:padding="5dip" />

                <EditText
                    android:id="@+id/content_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_hint"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="top"
                    android:hint="@string/content"
                    android:minLines="5"
                    android:padding="5dip" />

                <TextView
                    android:id="@+id/num_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/content_edt"
                    android:layout_marginTop="5dp"
                    android:text="@string/text_left"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/small_text_size" />

                <itstudio.instructor.widget.NoScrollGridView
                    android:id="@+id/gridview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/num_hint"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/edit_text_corner"
                    android:columnWidth="80dp"
                    android:gravity="center"
                    android:horizontalSpacing="5dp"
                    android:listSelector="@color/transparent"
                    android:numColumns="auto_fit"
                    android:padding="5dip"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp" />

                <TextView
                    android:id="@+id/submit_txt2"
                    android:layout_width="85dip"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/gridview"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/send_selector"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/send_space"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_text_size" />

                <TextView
                    android:id="@+id/drafts"
                    android:layout_width="85dip"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gridview"
                    android:layout_marginRight="25dip"
                    android:layout_marginTop="10dip"
                    android:layout_toLeftOf="@id/submit_txt2"
                    android:background="@drawable/drafts_selector"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/save_drafts"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_text_size" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>