<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <itstudio.instructor.widget.RoundedImageView
            android:id="@+id/user_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:maxHeight="80dip"
            android:maxWidth="80dip"
            android:src="@drawable/head_default_local" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/instructor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size" />

                <Button
                    android:id="@+id/bt_jiaguanzhu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/jiaguanzhu_bt_slector"
                    android:descendantFocusability="afterDescendants"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/follow"
                    android:textSize="@dimen/micro_text_size" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_resume"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/instructor_jianjie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:text="@string/user_sign"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/listview_separator"/>

</LinearLayout>